quick overlap fix

--- a/src/ui.css
+++ b/src/ui.css
@@ -38,10 +38,6 @@ html { display: flex; }
 	outline: none;
 }
 
-.ss-panel.close {
-	display: none;
-}
-
 .ss-panel:hover {
 	opacity: 1;
 }
